sgleam-core-tests/tests/snapshots/integration__run_images@square2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/square2.gleam
---
<svg width="50.0" height="50.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 50.0 0.0 L 50.0 50.0 L 0.0 50.0 Z" fill="none" stroke="rgba(139, 0, 139, 1.0)" />
</svg>
