sgleam-core-tests/tests/snapshots/integration__run_images@star_polygon1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/star_polygon1.gleam
---
<svg width="64.7213595499958" height="61.55367074350507" xmlns="http://www.w3.org/2000/svg">
  <path d="M 32.3606797749979 0.0 L 52.3606797749979 61.55367074350507 L 0.0 23.511410091698917 L 64.7213595499958 23.511410091698927 L 12.360679774997902 61.55367074350507 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
