sgleam-core-tests/tests/snapshots/integration__run_images@text1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/text1.gleam
---

