sgleam-core-tests/tests/snapshots/integration__run_images@text3.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/text3.gleam
---
<svg width="132.0" height="20.0" xmlns="http://www.w3.org/2000/svg">
  <text dominant-baseline="alphabetic" text-anchor="start" x="0.0" y="0.0" font-family="sans-serif" font-size="20.0" font-style="italic" font-weight="normal" transform="translate(66.0,10.0) rotate(0.0 0.0 0.0) scale(1.0,1.0)" fill="rgba(0, 0, 255, 1.0)" >Italic text</text>
</svg>
