sgleam-core-tests/tests/snapshots/integration__run_images@triangle_ass1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/triangle_ass1.gleam
---
<svg width="100.0" height="11.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 100.0 0.0 L 59.088465180732484 10.418890660015819 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
